--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cors": "^2.8.5",
     "customize-cra": "^1.0.0",
     "express": "^4.17.1",
+    "gh-pages": "^3.2.3",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.1",
     "react-app-rewired": "^2.1.8",
