--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/generator": "^7.15.8",
+    "@babel/parser": "^7.15.8",
+    "@babel/traverse": "^7.15.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,14 +13,18 @@
     "effector-react": "^22.0.4",
     "evergreen-ui": "^6.5.0",
     "htmlparser2": "^7.1.2",
+    "lodash": "^4.17.21",
     "patronum": "^1.1.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-ace": "^9.4.4",
     "react-dom": "^17.0.2",
+    "react-if": "^4.1.1",
+    "react-inspector": "^5.1.1",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-virtualized-auto-sizer": "^1.0.6",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
@@ -48,8 +55,10 @@
   },
   "devDependencies": {
     "@types/react-dom": "^17.0.9",
+    "@types/react-inspector": "^4.0.2",
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.3.0",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/styled-components": "^5.1.14",
     "cors": "^2.8.5",
     "customize-cra": "^1.0.0",
